# ref-builder

./: .gitignore  .releaserc  Dockerfile  LICENSE  README.md  TODO.md  mise.toml  ncbi_datasets_api_analysis.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish.yml
ref_builder/: __init__.py  audit.py  build.py  console.py  errors.py  index.py  isolate.py  logs.py  models.py  otu.py  plan.py  promote.py  repo.py  resources.py  store.py  utils.py  warnings.py
ref_builder/cli/: build.py  dev.py  event.py  isolate.py  main.py  options.py  otu.py  sequence.py  utils.py  validate.py  validate_cmd.py
ref_builder/dev/: __init__.py  format_model.py  otu_module.py.j2
ref_builder/events/: base.py  isolate.py  otu.py  repo.py  sequence.py
ref_builder/insdc/: models.py
ref_builder/legacy/: convert.py  handlers.py  models.py  utils.py
ref_builder/models/: accession.py  isolate.py  lineage.py  molecule.py  otu.py  plan.py  repo.py  sequence.py
ref_builder/ncbi/: client.py  models.py  taxonomy.py  utils.py
ref_builder/otu/: assign.py  create.py  get.py  isolate.py  models.py  modify.py  promote.py  update.py  utils.py  validate.py
ref_builder/services/: __init__.py  cls.py  isolate.py  (+2 more)
scratch/: .gitignore
scripts/: complete_taxonomy_lineages.py  extract_ncbi_cache_to_fixtures.py
tests/: conftest.py  test_add.py  test_build.py  test_build_fasta.py  test_console.py  test_factories.py  test_index.py  test_mock_ncbi_minimal.py  test_modify.py  test_otu.py  test_plan.py  test_promote.py  test_repo.py  test_resources.py  test_transaction.py  test_update.py
(+108 files in other folders)
