[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "ref-builder"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Ian Boyes" }, { name = "Shelley Gao" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
  "arrow>=1.3.0",
  "biopython>=1.85",
  "click>=8.3.0",
  "orjson>=3.11.3",
  "platformdirs>=4.4.0",
  "pydantic>=2.11.9",
  "requests>=2.32.5",
  "rich>=14.1.0",
  "structlog>=25.4.0",
]

[project.scripts]
ref-builder = "ref_builder.cli.main:entry"

[dependency-groups]
dev = [
  "polyfactory>=2.22.2",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
  "pytest-structlog>=1.2",
  "ruff>=0.13.2",
  "syrupy>=4.9.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D107",
  "D203",
  "D205",
  "D213",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "G004",
  "ISC001",
  "PTH123",
  "PLR0913",
  "TRY003",
  "TRY400",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "ANN202", "D205", "PLR2004", "S101", "S106"]
